# voltorbflip-clone

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Index.html  Lobby.html  README.md  build.ninja  cmake_install.cmake  diff.txt  main.cpp  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-541ca84c2999b49c7176.json  cmakeFiles-v1-047b1d56b7209e6a756b.json  codemodel-v2-56ab042156ac5c5cda00.json  directory-.-Debug-3da4cd45b3fa185785f0.json  index-2026-01-19T08-47-48-0220.json  target-simple-Debug-7181ddc706747b3a457c.json  target-simple_autogen-Debug-296c1f611dd7902ec0f8.json  target-simple_autogen_timestamp_deps-Debug-b59d806e2e3195e1b197.json
.github/workflows/: windows-build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/rcc/: assets.qrc  qrc_assets.cpp
Dokumentation/: Angebot - VoltorbFlip.docx  FirstDraft.pptx  Marketingstrategie.docx  UML_Klassendiagramm_Mermaid.txt  UML_Klassendiagramm_Prototyp1_mermaid.js  Wireframe.pptx
VOF-Client-Desktop/: Browser.cpp  Browser.h  Browser.ui  Browser.ui.orig  CMakeLists.txt  CardButton.h  Client.cpp  Client.h  Config.cpp  Config.h  Lobby.cpp  Lobby.h  Lobby.txt  Lobby.ui  Main.cpp  Match.cpp  Match.h  Match.ui  Menu.cpp  Menu.h  Menu.ui  Replay.cpp  Replay.h  Replay.ui  Rules.cpp  Rules.h  Rules.ui  Settings.cpp  Settings.h  Settings.ui  Shop.cpp  Shop.h  Shop.ui  client.cpp  client.h  lobby.cpp  lobby.h  lobby.ui  main.cpp  match.cpp  (+12 more)
VOF-Network/: CMakeLists.txt  Constants.h  GameLogic.cpp  GameLogic.h  GameState.h  Gamelogic.cpp  Gamelogic.h  GlobalDefines.cpp  GlobalDefines.h  IObserver.h  NetworkObserver.cpp  NetworkObserver.h  PlayerState.h  vofnetwork.cpp  vofnetwork.h
VOF-Server-CLI/: CMakeLists.txt  Gamelogic.cpp  Gamelogic.h  Main.cpp  PlayerProfile.h  VoltOrbFlipServer.cpp  VoltOrbFlipServer.h  main.cpp  voltOrbFlipServer.cpp  voltOrbFlipServer.h
simple_autogen/: deps  moc_predefs.h
